Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11845

Vcs: svn log handles all numbers as revisions

    XMLWordPrintable

Details

    • 97e9760a9a10698593d5e0681234dd8007511a64

    Description

      Steps to reproduce:

      • import/open a svn repository
      • use Tools -> Subversion -> Log Repository
      • hover over numbers of the svn log

      Current result:

      • any number (including date, time, ...) can be used as a revision number to click on

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            hunger Tobias Hunger
            cstenger Christian Stenger
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes