Subversion: Do not treat all numbers in log/annotate as revisions

Be more picky about what we consider to be a revision.

Task-number: QTCREATORBUG-11845
Change-Id: If6dc68a564376df7dd26a0e996c74f7ebcc29177
Reviewed-by: Orgad Shaneh <orgads@gmail.com>